first steps in introducing es6 modules

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                             <option value="dvorak">DVORAK</option>
                             <option value="colemak">COLEMAK</option>
                         </select>    
+                        <select id="language">
+                            <option value="en">Language</option>
+                            <option value="nl">Nederlands</option>
+                            <option value="de">Deutsch</option>
+                        </select>    
                     </div>
                     <div class="col-md-4 text-right">
                         <div class="btn-group header-info-group m-right-half-em" role="group" aria-label="...">
@@ -472,7 +477,7 @@
         </script>
         <!-- END: Templates -->
 
-        <script src='js/APP.js'></script>
+        <script src='js/src/app.js' type="module"></script>
 
         <footer class="col-md-12 hc-footer text-center">
             Please take this <a href="https://goo.gl/forms/bJylErhsSrXlOFPI3" target="_blank">short survey</a> and help improve this product with your feedback. Also, Please give your feedbacks and suggestions by email (hello@hotcoldtyping.com) or through twitter (<a href='https://twitter.com/hotcoldtyping' target='_blank'>@hotcoldtyping</a>)
